@@ -1,3 +1,9 @@
+Thu Aug 29 23:37:29 GMT 2013  Olly Betts <olly@survex.com>
+
+	* Makefile.am,omindex.cc: Add omindex --opendir-sleep=SECS option to
+	  allow working around problems with indexing files on Microsoft DFS
+	  shares.
+
 Thu Aug 22 22:04:11 GMT 2013  Olly Betts <olly@survex.com>
 
 	* xlsxparse.cc: Handle pre-defined numfmtid codes for dates.
